InternexDev_Sandbox/src/objects/Partner__c.object
<CustomObject>
    <fields>
        <fullName>CRM_ID__c</fullName>
        <externalId>true</externalId>
        <label>CRM ID</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Sum_of_Draw_Fees__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Formula: Sum of Partner Draw Fees of All Client-Accounts</inlineHelpText>
        <label>Sum of Draw Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sum_of_Origination_Fees__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Formula: Sum of Partner Origination Fees of All Client-Accounts</inlineHelpText>
        <label>Sum of Origination Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Partner</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CRM_ID__c</columns>
        <columns>Sum_of_Draw_Fees__c</columns>
        <columns>Sum_of_Origination_Fees__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Partner Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partners</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>